solver needs to be finished

--- a/sections/solver.tex
+++ b/sections/solver.tex
@@ -1,6 +1,6 @@
 \subsection{Selection of the solver}
 
-\paragraph{}This solver used has been designed to work with non compressible flows, specifically. It solves the Navier Stokes equations for a given incompressible flow in steady-state conditions.
+\paragraph{}The solver used is the \textit{pimpleDyMFoam}. It solves the Navier Stokes equations for a given incompressible flow in steady-state conditions.
 
 \begin{equation}
 \nabla \vec{u} = 0
@@ -10,4 +10,4 @@
 \frac{\partial \vec{u}}{\partial t} + \vec{u} (\nabla \vec{u}) = \nu \nabla^2 \vec{u} - \nabla p + \vec{g}
 \end{equation}
 
-\paragraph{}\textbf{NO SE QUE ESCRIBO...TENGO SUEÑO}
+\paragraph{}
