--- a/sections/Control.tex
+++ b/sections/Control.tex
@@ -1,19 +1,17 @@
 \subsection{ControlDict}
-\paragraph{}This file is really important for the simulation since it contains the timesteps that it will pursue. So, to begin, the initial and final times of the simulation have to be defined. In this case, the \textit{startTime} is 0s and the \textit{endTime} has been set to 20 s. No more simulation time is needed since it has been assumed that the flow is stationary. These changes can be made in the \textit{system/controlDict} file.
-
-\paragraph{}\textbf{NOTA: DEPEN DEL SOLVER! Si no fem servir SIMPLEFOAM s'he de tornar a COPIAR!}
+\paragraph{}This file is really important for the simulation since it contains the timesteps that it will pursue . So, to begin, the initial and final times of the simulation have to be defined. In this case, the \textit{startTime} is 0 s and the \textit{endTime} has been set to $1*10^{-4}$ s. These changes can be made in the \texttt{system/controlDict} file. Furthermore, the application chosen is \textit{pimpleDyMFoam}, a modified pimpleFoam that handles dynamic meshes.
 
 \begin{footnotesize}
 \begin{verbatim}
-application     simpleFoam;
+application     pimpleDyMFoam;
 
-startFrom       latestTime;
+startFrom       startTime;
 
 startTime       0;
 
 stopAt          endTime;
 
-endTime         20;
+endTime         1e-4;
 
 
 \end{verbatim}
@@ -23,11 +21,11 @@ endTime         20;
 
 \begin{footnotesize}
 \begin{verbatim}
-deltaT          1;
+deltaT          .5e-4;
 
 writeControl    timeStep;
 
-writeInterval   5;
+writeInterval   1;
 
 purgeWrite      0;
 
@@ -35,7 +33,7 @@ writeFormat     binary;
 
 writePrecision  6;
 
-writeCompression uncompressed;
+writeCompression off;
 
 timeFormat      general;
 
@@ -44,14 +42,14 @@ timePrecision   6;
 \end{verbatim}
 \end{footnotesize}
 
-\paragraph{}Since it is really clear what the other variables do, they will not be explained here. Finally, the file that has been used to run the simulation is presented below.
+\paragraph{}It is noteworthy the \textit{runTimeModifiable}, which modifies the deltaT in each iteration to make possible the convergence. Since it is really clear what the other variables do, they will not be explained here. Finally, the file that has been used to run the simulation is presented below.
 
 \begin{footnotesize}
 \begin{verbatim}
 /*--------------------------------*- C++ -*----------------------------------*\
 | =========                 |                                                 |
 | \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox           |
-|  \\    /   O peration     | Version:  4.0                                   |
+|  \\    /   O peration     | Version:  4.x                                   |
 |   \\  /    A nd           | Web:      www.OpenFOAM.org                      |
 |    \\/     M anipulation  |                                                 |
 \*---------------------------------------------------------------------------*/
@@ -60,25 +58,26 @@ FoamFile
     version     2.0;
     format      ascii;
     class       dictionary;
+    location    "system";
     object      controlDict;
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
-application     simpleFoam;
+application     pimpleDyMFoam;
 
-startFrom       latestTime;
+startFrom       startTime;
 
 startTime       0;
 
 stopAt          endTime;
 
-endTime         20;
+endTime         1e-4;
 
-deltaT          1;
+deltaT 		    .5e-4;
 
 writeControl    timeStep;
 
-writeInterval   5;
+writeInterval   1;
 
 purgeWrite      0;
 
@@ -86,7 +85,7 @@ writeFormat     binary;
 
 writePrecision  6;
 
-writeCompression uncompressed;
+writeCompression off;
 
 timeFormat      general;
 
@@ -94,15 +93,10 @@ timePrecision   6;
 
 runTimeModifiable true;
 
-/*functions
-{
-    #include "streamLines"
-    #include "wallBoundedStreamLines"
-    #include "cuttingPlane"
-    #include "forceCoeffs"
-}
+adjustTimeStep  yes;
 
-*/
+maxCo           2;
+
 // ************************************************************************* //
 
 \end{verbatim}
