--- a/sections/Preprocess.tex
+++ b/sections/Preprocess.tex
@@ -1,6 +1,7 @@
 \section{Pre-processing}
 
-\input{./sections/Mesh} 
+\input{./sections/mesh}
+\newpage\input{./sections/checkMesh}
 \newpage\input{./sections/Rotation}
 \newpage\input{./sections/Boundaryconditions}
 \newpage\input{./sections/Transportproperties}
