--- a/sections/Transportproperties.tex
+++ b/sections/Transportproperties.tex
@@ -1,6 +1,6 @@
 \subsection{Properties of the flow}
 
-\paragraph{}The properties of the flow have to be defined taking into account the hypotheses made for the case. As mentioned in previous sections, the flow is assumed to be Newtonian. This property can be modified in the \textit{/constant/transportProperties} file. Also, since the flow we are dealing with is air, the kinematic viscosity (\nu) has to be set to $1e-6 m^2/s$.
+\paragraph{}The properties of the flow have to be defined taking into account the hypotheses made for the case. As mentioned in previous sections, the flow is assumed to be Newtonian. This property can be modified in the \textit{/constant/transportProperties} file. Also, since the flow we are dealing with is air, the kinematic viscosity has to be set to $1e-6 m^2/s$.
 
 \begin{footnotesize}
 \begin{verbatim}
