--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -6,5 +6,5 @@
 
 \paragraph{}In order to do a realistic simulation, we have been gathering lots of information of this type of engines and their typical working conditions. Also, we have been searching for information about how could we solve a geometry that is rotating. Several simulations and comparisons will be presented in this report to analyze the validity of the results obtained. 
 
-\paragraph{}It will be presented in this report how to use the Multiple Reference Frame utility (MRF) as well as the boundary conditions, the mesh generation and the solver that has been used for the case. Additionally, several hypotheses will be considered in order to alleviate the computation time (given that this project has been simulated in a laptop).
+\paragraph{}It will be presented in this report how to use the Arbitrary Mesh Interface utility (AMI) as well as the boundary conditions, the mesh generation and the solver that has been used for the case. Additionally, several hypotheses will be considered in order to alleviate the computation time (given that this project has been simulated in a laptop).
 
