--- a/sections/mesh.tex
+++ b/sections/mesh.tex
@@ -15,7 +15,7 @@
 \label{axisparaview}
 \end{figure}
 
-\paragraph{}Now that the points enclosing the desired geometry are clear, they can be modified in the \textit{blockMeshDict} file. This change is presented below:
+\paragraph{}Now that the points enclosing the desired geometry are clear, they can be modified in the \texttt{system/blockMeshDict} file. This change is presented below:
 
 \begin{footnotesize}
 \begin{verbatim}
