changes in the COVER and Hypotheses

--- a/doc_config/cover.tex
+++ b/doc_config/cover.tex
@@ -25,9 +25,11 @@
 
 %\includegraphics[width=0.4\textwidth]{./doc_config/images/DF_logo}
 
+{\Large \ProjectName}
+
 \textcolor{UPC_blue}{\rule{\textwidth}{.6pt}}
 
-{\Large \ProjectName}
+{\Large \DocType}
 
 \end{center}
 
