--- a/sections/Rotation.tex
+++ b/sections/Rotation.tex
@@ -1,5 +1,5 @@
 \subsection{Rotation}
-\paragraph{}An important consideration for this project is that the rotor is spinning at a high speed and this condition has to be somehow communicated to \textit{OpenFOAM}. To work with this condition there are three possible aproaches, which are widely described in \cite{Nozaki9240}, the Single Rotation Frame (SRF), the Multiple Reference Frame (MRF) and the Arbitrary Mesh Interference (AMI). In this particular case AMI is going to be used. The method itself is based on defining a sliding mesh where the part of the mesh that moves is rotating in every timestep and the values of the cells lying on the interference are interpolated to update the mesh in every timestep. 
+\paragraph{}An important consideration for this project is that the rotor is spinning at a high speed and this condition has to be somehow communicated to \textit{OpenFOAM}. To work with this condition there are three possible aproaches, which are widely described in \cite{Nozaki9240}, the Single Rotation Frame (SRF), the Multiple Reference Frame (MRF) and the Arbitrary Mesh Interface (AMI). In this particular case AMI is going to be used. The method itself is based on defining a sliding mesh where the part of the mesh that moves is rotating in every timestep and the values of the cells lying on the interference are interpolated to update the mesh in every timestep. 
 
 \paragraph{}To apply this method, a solid containing the "moving" domain has to be defined as a \texttt{cellZone}. How to do that has been shown in the previous section. In our case the moving domain is the one contained between the low-pressure compressor and the nearest wall as shown in the figure~\ref{AMI}. 
 
