--- a/sections/Boundaryconditions.tex
+++ b/sections/Boundaryconditions.tex
@@ -67,7 +67,7 @@ boundaryField
 \end{verbatim}
 \end{footnotesize}
 
-\paragraph{}As it can be seen above, the value of the velocity at the inlet has been set to 200 $m/s$ (about 720 $km/h$). The \textit{inletOutlet} condition has been set to the outlet (this is: the flow is restricted to move always forwards and reverse flow cannot appear at this region). The NacelleStator file has the noSlip condition given that the fluid is supposed to be Newtonian. Finally, the initial velocity field for the rotational parts AMI1 and AMI2 have been to 0 (this is: the flow is not moving at the beginning of the simulation).
+\paragraph{}As it can be seen above, the value of the velocity at the inlet has been set to 200 $m/s$ (about 720 $km/h$). The \textit{inletOutlet} condition has been set to the outlet (this is: the flow is restricted to move always forwards and reverse flow cannot appear at this region). The NacelleStator file has the noSlip condition given that the fluid is supposed to be Newtonian. Finally, the initial velocity field for the rotational parts AMI1 and AMI2 have been set to 0 (this is: the flow is not moving at the beginning of the simulation).
 
 \subsubsection{Pressure}
 
