--- a/sections/Boundaryconditions.tex
+++ b/sections/Boundaryconditions.tex
@@ -3,7 +3,7 @@
 
 \subsubsection{Velocity}
 
-\paragraph{}Some initial conditions and values have to be defined in order to run the simulation. The initial velocity field and pressure are especially important since these inputs are the starting values of the simulation. So, it is clear that the values at the \textit{inlet}, which was defined within the previous sections, have to be defined. Additionally, the values at the \textit{outlet} of the geometry have to be defined as well, but they can be, unlike the \textit{inlet}, not fixed values. Thus, the following modifications have to be made in the  \textit{0.orig/U}.
+\paragraph{}Some initial conditions and values have to be defined in order to run the simulation. The initial velocity field and pressure are especially important since these inputs are the starting values of the simulation. So, it is clear that the values at the \textit{inlet}, which was defined within the previous sections, have to be defined. Additionally, the values at the \textit{outlet} of the geometry have to be defined as well, but they can be, unlike the \textit{inlet}, not fixed values. Thus, the following modifications have to be made in the  \texttt{0.orig/U}.
 
 \begin{footnotesize}
 \begin{verbatim}
@@ -71,7 +71,7 @@ boundaryField
 
 \subsubsection{Pressure}
 
-\paragraph{}The initial conditions for the pressure have to be evaluated as well in the \textit{0.orig/p} file.
+\paragraph{}The initial conditions for the pressure have to be evaluated as well in the \texttt{0.orig/p} file.
 
 \begin{footnotesize}
 \begin{verbatim}
