--- a/sections/Control.tex
+++ b/sections/Control.tex
@@ -1,6 +1,6 @@
 \subsection{controlDict - parameters for the simulation}
 
-\paragraph{}This file is really important for the simulation since it contains the timesteps and other variables such as the \texttt{endTime} or \texttt{startTime}. To begin, the initial and final times of the simulation have to be defined. In this case, the \texttt{startTime} is 0 s and the \texttt{endTime} has been set to $1e{-3}$s. These changes can be made in the \texttt{system/controlDict} file. Furthermore, this file also states the application chosen (\textit{pimpleDyMFoam}), a modified pimpleFoam that handles dynamic meshes.
+\paragraph{}This file is really important for the simulation since it contains the timesteps and other variables such as the \texttt{endTime} or \texttt{startTime}. To begin, the initial and final times of the simulation have to be defined. In this case, the \texttt{startTime} is 0 s and the \texttt{endTime} has been set to $1e^{-3}$s. These changes can be made in the \texttt{system/controlDict} file. Furthermore, this file also states the application chosen (\textit{pimpleDyMFoam}), a modified pimpleFoam that handles dynamic meshes.
 
 \begin{footnotesize}
 \begin{verbatim}
