--- a/sections/Runapplication.tex
+++ b/sections/Runapplication.tex
@@ -6,7 +6,7 @@
 \texttt{blockMesh >blockMesh.log}
 \end{center}
 
-\paragraph{}When the \textit{blockMesh} has been generated, the next thing to do is the refinement of the mesh. So, the \textit{snappyHexMesh} utility will be used, provided that all the parameters in \textit{snappyHexMeshDict} have been modified. In the terminal, the following command has to be typed:
+\paragraph{}When the \textit{blockMesh} has been generated, the next thing to do is the refinement of the mesh. So, the \textit{snappyHexMesh} utility will be used, provided that all the parameters in \texttt{system/snappyHexMeshDict} have been modified. In the terminal, the following command has to be typed:
 
 \begin{center}
 \texttt{foamJob decomposePar \\
